TicketToRide/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_73\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Owner\Desktop\CSIS 225\TicketToRide
-d
C:\Users\Owner\Desktop\CSIS 225\TicketToRide\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Owner\Desktop\CSIS 225\TicketToRide\Player.java
<---- end of javadoc command ---->
Loading source file C:\Users\Owner\Desktop\CSIS 225\TicketToRide\Player.java...
C:\Users\Owner\Desktop\CSIS 225\TicketToRide\Player.java:11: error: ';' expected
    protected int trains
                        ^
1 error
